# UltraVNC

./: .gitignore  .gitmodules  BUILDING with BCC.txt  BUILDING-with-BCC.txt  BUILDING.txt  CMakeLists.DevTry  CMakePresets.json  CMakeSettings.json  PORTABLE_MODE.md  README.md  README.txt  UltraVNC-1.0.2-Light.iss  UltraVNC-QtCommunityTests.cflags  UltraVNC-QtCommunityTests.config  UltraVNC-QtCommunityTests.creator  UltraVNC-QtCommunityTests.cxxflags  UltraVNC-QtCommunityTests.files  UltraVNC-QtCommunityTests.includes  UltraVNC-QtCommunityTests.pro  UltraVNC.iss  UltraVNC100-sf.iss  UltraVNC100.iss  UltraVNC_installer_x64.iss  UltraVNC_installer_x86.iss  UltraVnc_installer_all_X64.iss  UltraVnc_installer_all_X86.iss  UltraVnc_installer_script _mini.iss  UltraVnc_installer_script.iss  UltraVnc_installer_script_update_server.iss  UltraVnc_installer_script_update_simple.iss  VCPKG_README.txt  Whatsnew.txt  build-bcc32.bat  vcpkg-configuration.json  vcpkg-list-sample.txt  vcpkg.json
.qtc_clangd/: compile_commands.json
DSMPlugin/: DSMPlugin.cpp  DSMPlugin.h
Files/: changelog.txt  readme.rtf
JavaViewer/: AuthPanel.java  ButtonPanel.java  ChangeLog  ClipboardFrame.java  DH.java  DesCipher.java  FTPFrame.java  Makefile  OptionsFrame.java  README  ReadMe+  ReadMe.txt  dir.mk  (+14 more)
cmake/: CMakeCache.txt  CMakeLists.txt  CMakeLists_libomnithread.txt  CMakeLists_librdr.txt  CMakeLists_libuvncsettings.txt  CMakeLists_libz.txt  CMakeLists_libzip32.txt  CMakeLists_libzipunzip.txt  CMakePresets.json.DevTry  CMakeSettings.json  CMakeUserPresets.json.DevTry  ReadMe+.txt  VCPKG_README.txt  readme.txt  toolchain-mingw32-w64_i686.cmake  toolchain-mingw32-w64_x86_64.cmake  vcpkg.json
cmake/MSLogonACL/: CMakeLists.txt
cmake/SecureVNCPlugin/: CMakeLists.txt
cmake/authSSP/: CMakeLists.txt
cmake/authadmin/: CMakeLists.txt
cmake/createpassword/: CMakeLists.txt
cmake/ldapauth/: CMakeLists.txt
cmake/ldapauth9x/: CMakeLists.txt
cmake/ldapauthnt4/: CMakeLists.txt
cmake/libjpeg/: CMakeLists.txt
cmake/libomnithread/: CMakeLists.txt
cmake/librdr/: CMakeLists.txt
cmake/libudt4/: CMakeLists.txt
cmake/libudtcloud/: CMakeLists.txt
cmake/libuvncsettings/: CMakeLists.txt
cmake/libzip32/: CMakeLists.txt
cmake/libzipunzip/: CMakeLists.txt
cmake/libzstd/: CMakeLists.txt
cmake/logging/: CMakeLists.txt
cmake/logmessages/: CMakeLists.txt
cmake/repeater/: CMakeLists.txt
cmake/setcad/: CMakeLists.txt
cmake/setpasswd/: CMakeLists.txt
cmake/testauth/: CMakeLists.txt
cmake/ultravnc_service/: CMakeLists.txt
cmake/uvnc_settings/: CMakeLists.txt
cmake/uvnckeyboardhelper/: CMakeLists.txt
cmake/vnchooks/: CMakeLists.txt
cmake/vncviewer/: CMakeLists.txt  CMakeLists.txt.org
cmake/winvnc/: CMakeLists.txt
cmake/workgrpdomnt4/: CMakeLists.txt
librats/: .gitignore  BUILDING_WINDOWS.md  CMakeLists.txt  LICENSE  README.md  README_BUILD.md  create_native_project.bat  create_native_project.ps1  rats_native.vcxproj  regenerate_vs_projects.bat  version.rc.in
librats/.github/workflows/: android.yml  pages.yml  rats.yml
librats/android/: INTEGRATION.md  README.md  build.gradle  consumer-rules.pro  gradle.properties  settings.gradle
librats/android/examples/: build.gradle
librats/android/examples/src/main/: AndroidManifest.xml
librats/android/examples/src/main/java/com/librats/example/: MainActivity.java
librats/android/examples/src/main/res/layout/: activity_main.xml
librats/android/examples/src/main/res/values/: strings.xml
librats/android/gradle/wrapper/: gradle-wrapper.properties
librats/android/src/main/: AndroidManifest.xml
librats/android/src/main/cpp/: CMakeLists.txt  librats_jni.cpp
librats/android/src/main/java/com/librats/: BinaryMessageCallback.java  ConnectionCallback.java  DirectoryProgressCallback.java  DirectoryRequestCallback.java  DisconnectCallback.java  FileRequestCallback.java  JsonMessageCallback.java  RatsClient.java  RatsException.java  StringMessageCallback.java  TopicJsonMessageCallback.java  TopicMessageCallback.java  TopicPeerJoinedCallback.java  TopicPeerLeftCallback.java
librats/docs/: BITTORRENT_EXAMPLE.md  CNAME  CUSTOM_PROTOCOL.md  FILE_TRANSFER_EXAMPLE.md  GOSSIPSUB_EXAMPLE.md  LOGGING_API_EXAMPLE.md  MDNS_DISCOVERY.md  MESSAGE_EXCHANGE_API.md  NAT_TRAVERSAL.md  NAT_TRAVERSAL_EXAMPLE.md  NOISE_ENCRYPTION.md  index.html  styles.css
librats/nodejs/: README.md  binding.gyp  package.json
librats/nodejs/examples/: basic_client.js  file_transfer.js  gossipsub_chat.js
librats/nodejs/src/: librats_node.cpp
librats/nodejs/test/: test.js
librats/python/: .gitignore  MANIFEST.in  PYTHON_BINDINGS.md  README.md  build.py  pyproject.toml  requirements.txt  setup.py
librats/python/librats_py/: __init__.py  callbacks.py  core.py  ctypes_wrapper.py  enums.py  exceptions.py
librats/python/librats_py/examples/: __init__.py  basic_client.py  file_transfer.py  gossipsub_chat.py
librats/python/librats_py/tests/: __init__.py  conftest.py  test_client.py  test_integration.py
librats/src/: bencode.cpp  bencode.h  bittorrent.cpp  bittorrent.h  dht.cpp  dht.h  encrypted_socket.cpp  encrypted_socket.h  file_transfer.cpp  file_transfer.h  fs.cpp  fs.h  gossipsub.cpp  gossipsub.h  ice.cpp  ice.h  krpc.cpp  krpc.h  librats.cpp  librats.h  librats_c.cpp  librats_c.h  librats_encryption.cpp  librats_file_transfer.cpp  librats_gossipsub.cpp  librats_ice.cpp  librats_logging.cpp  librats_mdns.cpp  librats_nat.cpp  librats_persistence.cpp  logger.h  main.cpp  mdns.cpp  mdns.h  network_utils.cpp  network_utils.h  noise.cpp  noise.h  os.cpp  os.h  (+12 more)
librats/tests/: test_bencode.cpp  test_bittorrent.cpp  test_config_persistence.cpp  test_dht.cpp  test_file_transfer.cpp  test_fs.cpp  test_gossipsub.cpp  test_ice.cpp  test_librats_c_api.cpp  test_logging_api_gtest.cpp  test_main.cpp  test_mdns.cpp  test_message_exchange.cpp  test_network_utils.cpp  test_noise.cpp  test_os.cpp  test_rats_client.cpp  test_sha1.cpp  test_socket.cpp  test_stun.cpp
librats/vnc_bridge/: CMakeLists.txt  vnc_bridge.cpp  vnc_bridge.h  vnc_bridge_impl.cpp  vnc_bridge_main.cpp
(+1715 files in other folders)
